--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        "Onchip Ring VCO 11stg"      # Project title
-  author:       "Ramon Sarmiento"      # Your name
-  discord:      "rsarmiento"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Onchip Ring VCO 11stg"      # One line description of what your project does
+  title:        "Onchip - Ring VCO 11 stages x2"      # Project title
+  author:       "Jorge Angarita"      # Your name
+  discord:      "Giorgi"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Two identical 11-stages ring oscillator voltage controled oscillator"      # One line description of what your project does
   language:     "Analog" # other examples include Verilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -15,7 +15,7 @@ project:
   uses_3v3: false       # Set to true if your project uses 3.3V (VAPWR) in addition to 1.8V (VDPWR)
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_Onchip_RCO"
+  top_module:  "tt_um_Onchip_VCOx2"
 
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
   source_files:        
@@ -25,7 +25,7 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: "vrst"
+  ui[0]: ""
   ui[1]: ""
   ui[2]: ""
   ui[3]: ""
@@ -55,12 +55,12 @@ pinout:
   uio[7]: ""
 
   # Analog pins - make sure to also set "analog_pins" above, else the pins won't be connected
-  ua[0]: "vctrn"
-  ua[1]: "out"
-  ua[2]: ""
-  ua[3]: ""
-  ua[4]: ""
-  ua[5]: ""
+  ua[0]: "vrst1"
+  ua[1]: "vctrn1"
+  ua[2]: "out1"
+  ua[3]: "vrst2"
+  ua[4]: "vctrn2"
+  ua[5]: "out2"
 
 # Do not change!
 yaml_version: 6
